; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_percpu.c_pcpu_chunk_slot.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_percpu.c_pcpu_chunk_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcpu_chunk = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcpu_chunk*)* @pcpu_chunk_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcpu_chunk_slot(%struct.pcpu_chunk* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pcpu_chunk*, align 8
  store %struct.pcpu_chunk* %0, %struct.pcpu_chunk** %3, align 8
  %4 = load %struct.pcpu_chunk*, %struct.pcpu_chunk** %3, align 8
  %5 = getelementptr inbounds %struct.pcpu_chunk, %struct.pcpu_chunk* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = sext i32 %6 to i64
  %8 = icmp ult i64 %7, 4
  br i1 %8, label %15, label %9

9:                                                ; preds = %1
  %10 = load %struct.pcpu_chunk*, %struct.pcpu_chunk** %3, align 8
  %11 = getelementptr inbounds %struct.pcpu_chunk, %struct.pcpu_chunk* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = sext i32 %12 to i64
  %14 = icmp ult i64 %13, 4
  br i1 %14, label %15, label %16

15:                                               ; preds = %9, %1
  store i32 0, i32* %2, align 4
  br label %21

16:                                               ; preds = %9
  %17 = load %struct.pcpu_chunk*, %struct.pcpu_chunk** %3, align 8
  %18 = getelementptr inbounds %struct.pcpu_chunk, %struct.pcpu_chunk* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pcpu_size_to_slot(i32 %19)
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %16, %15
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @pcpu_size_to_slot(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
